--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.7.7",
     "graphql": "^16.9.0",
     "joi": "^17.13.3",
     "reflect-metadata": "^0.2.0",
